manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gateway
  namespace: envoy-gateway-system
spec:
  gatewayClassName: envoy-oci # Points to a GatewayClass using the EnvoyProxy above
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      # Traffic is already decrypted by OCI LB when it hits Envoy
      protocol: HTTP 
      port: 443
      allowedRoutes:
        namespaces:
          from: All
